# CustomTkinter-Variant-File-Generator

./: ChangeLog.txt  README.md  build.py  function.py  main.py  poetry-instruction.md  product_demo_data.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml
demo/: create_demo_eep.py  demo_writeheader.bat
docs/: poetry-instruction.md  release-process
tests/: __init__.py  conftest.py  test_function.py  test_main.py
tools/: gen_mermaid_urls.py  mermaid_urls.txt
