[project]
name = "CustomTkinter-Variant-File-Generator"
version = "0.2.0"
description = "A GUI application using CustomTkinter for generating .MOT files from EEP files."
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
